src/test/deca/context/valid/self/readInt.deca


{
    int x;
    x=readInt() ;
    println(x);
}