src/test/deca/context/invalid/self/proteger.deca
class A {
    protected int x=1;
}

{
    A a = new A();
    println(a.x);
}